# ukr-handwriting-classification

./: .env.example  .gitignore  README.md  docker-compose.yaml  dvc.yaml  pyproject.toml
.dvc/: config
Docker/: .gitignore
Docker/mlflow_image/: Dockerfile
Docker/model_api_image/: Dockerfile
data/interim/: .gitignore
data/interim/cp/: data_cleaned.csv  digits.csv
data/processed/: .gitignore
data/processed/cp/: final.csv  test_data.csv  train_data.csv
data/raw/: .gitignore  MNIST.dvc  glyphs.csv.dvc  glyphs.dvc
models/: .gitignore  best_params.json  complete_model.pt  complete_model.pt.dvc  complete_model_v1.pt  final_model.pth  mnist_model.pt  mnist_model.pt.dvc  model_heads.pth
notebooks/: eda_and_viz.ipynb  make_codes.ipynb  mnist_training.ipynb  model_training.ipynb  model_training_1.ipynb  optuna.ipynb
src/: models.py  utils.py
src/backend/: main.py  utils.py
src/data/: clean_data.py  datasets.py  make_dataset.py  merge_pictures.py  prepare_glyphs.py  prepare_mnist.py  split_train_test.py  utils.py
src/features/: features.py
src/frontend/: Home.py  requirements.txt  utils.py  🏠 Home.py  🏠_Home.py
src/frontend/pages/: ❓ About.py  ❓_About.py
src/models/: evaluate.py  functional.py  models.py  train.py  train_and_eval.py
