[tool.poetry]
name = "ukrainian_handwriting"
version = "0.1.0"
description = ""
authors = ["Nazar Polishchuk <nazarr.polishchuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.0"
torchvision = "^0.13.0"
torchaudio = "^0.12.0"
scikit-learn = "^1.1.1"
opencv-python = "^4.6.0"
dvc = {extras = ["s3"], version = "^2.15.0"}
mlflow = "^1.27.0"
python-dotenv = "^0.20.0"
streamlit = "^1.12.0"
streamlit-drawable-canvas = "^0.9.1"

[tool.poetry.dev-dependencies]
notebook = "^6.4.12"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
numpy = "^1.23.0"
seaborn = "^0.11.2"
optuna = "^2.10.1"
ipywidgets = "^7.7.1"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
